<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.app.gitrepositories.ui.RepositoryListActivity" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lavender">

        <ImageView
            android:id="@+id/nointernet_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/nointernet_connection"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewSomethingWentWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nointernet_connection"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="@font/robotobold"
            android:text="@string/something_went_wrong"
            android:textColor="@color/colorNoInternet"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nointernet_connection" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewSomethingWentWrong"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="@font/robotoregular"
            android:text="@string/an_alien_is_probably_blocking_your_signal"
            android:textColor="@color/colorAlienText"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSomethingWentWrong" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRetry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xlarge"
            android:layout_marginEnd="@dimen/margin_xlarge"
            android:layout_marginBottom="80dp"
            android:background="@drawable/retry_button"
            android:fontFamily="@font/robotomedium"
            android:onClick="@{()->activity.retryFetching()}"
            android:text="@string/retry"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/font_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>